# expenses-log-ai-agent

./: .gitignore  AGENTS.md  README.md  compose.yml  package-lock.json
.github/workflows/: lint.yml
expenses-agent/: .dockerignore  .env.example  Dockerfile  README.md  __init__.py  langgraph.json  main.py  pyproject.toml  pyrightconfig.json  requirements.txt
expenses-agent/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
expenses-agent/shared/: types.py
expenses-agent/src/: agent_state.py  graph.py  llm.py  mcp_client.py  nodes.py  tools.py  types.py
expenses-api/: .dockerignore  .env.example  Dockerfile  README.md  __init__.py  main.py  pyproject.toml  pyrightconfig.json  requirements.txt
expenses-api/alembic/: env.py
expenses-api/alembic/versions/: a758fc557b16_.py  b1234567890a_seed_test_user.py
expenses-api/api/: deps.py
expenses-api/api/v1/endpoints/: category.py  expense.py  user.py
expenses-api/config/: db_config.py
expenses-api/core/: constants.py
expenses-api/db/: base.py  models.py  session.py
expenses-api/db/repositories/: __init__.py  base_repository.py  repositories.py
expenses-api/exceptions/: custom_exceptions.py
expenses-api/schemas/: __init__.py  schema.py
expenses-api/services/: __init__.py  services.py
expenses-api/utils/: __init__.py  encryption_utils.py  ensure_uuid_value_utils.py  logger_utils.py
expenses-mcp/: .env.example  Dockerfile  README.md  main.py  pyproject.toml  pyrightconfig.json
expenses-mcp/src/: mcp_server.py  tools.py  types.py
ui/: .dockerignore  .env.example  Dockerfile  Dockerfile.prod  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
ui/app/: layout.tsx  page.tsx
ui/app/api/copilotkit/: route.ts
