[project]
name = "expenses-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "ag-ui-langgraph>=0.0.27",
  "copilotkit>=0.1.81",
  "fastapi>=0.135.1",
  "langchain-core>=1.4.0",
  "langchain-deepseek>=1.1.0",
  "langchain-ollama>=0.3.0",
  "langgraph>=1.0.10",
  "pydantic==2.12.5",
  "python-dotenv==1.2.2",
  "requests==2.32.5",
  "urllib3==2.6.3",
  "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
  "langgraph-cli[inmem]>=0.4.18",
  "pyright>=1.1.411",
  "ruff>=0.9.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
