[project]
name = "expenses-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiomysql==0.2.0",
    "alembic==1.15.1",
    "cryptography==44.0.0",
    "fastapi[standard]==0.128.4",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "pymysql==1.1.1",
    "sqlalchemy==2.0.46",
]
